--- a/amazonbooklist_spring/src/main/resources/application.properties
+++ b/amazonbooklist_spring/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 spring.application.name=amazonbooklist
+datasource.url=${MYSQL_URL}
+datasource.username=${MYSQL_USERNAME}
+datasource.password=${MYSQL_PASSWORD}
