--- a/amazonbooklist_spring/src/main/resources/application.properties
+++ b/amazonbooklist_spring/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=amazonbooklist
-datasource.url=${MYSQL_URL}
-datasource.username=${MYSQL_USERNAME}
-datasource.password=${MYSQL_PASSWORD}
+spring.datasource.url=${MYSQL_URL}
+spring.datasource.username=${MYSQL_USERNAME}
+spring.datasource.password=${MYSQL_PASSWORD}
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
